    HIGHLIGHTS.txt.

Version 7.1  [ TODO ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
        - Updated the bundled copy of Normaliz to version 3.9.2 (7 Feb 2022).
    ENGINE:
        Class CallableArg<...>:
            - Now a public helper class in the main regina:: namespace.
            - Now behaves gracefully if the given index is out of range.
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class FacetPairing<dim>:
            - In findAllPairings(), the action is no longer required to
              take the list of all automorphisms if it does not need them.
        Class HilbertPrimal:
            - The header no longer includes the Normaliz headers (which
              Regina does not actually ship with its development files).
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.
            - Deprecated applyInPlace(), since this is no faster than
              calling tri = iso(tri).
            - Added bracket operators to apply an isomorphism to a
              FacetSpec or a FacetPairing.
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
        Type safe_tuple_element<...>:
            - New type alias that is like std::tuple_element<...> but
              with well-defined behaviour for an out-of-range index.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().