@@ -4,6 +4,7 @@ SET ( FILES
   complement.cpp
   crushtri.cpp
   decompose.cpp
+  edge3.cpp
   homology.cpp
   homologicaldata.cpp
   hydrate.cpp
@@ -34,6 +35,7 @@ SET( SOURCES ${SOURCES} PARENT_SCOPE)
 if (${REGINA_INSTALL_DEV})
   INSTALL(FILES
     component3.h
+    edge3.h
     homologicaldata.h
     tetrahedron3.h
     triangle3.h
