@@ -214,7 +214,6 @@ class FaceEmbedding : public detail::FaceEmbeddingBase<dim, subdim> {
 template <int dim, int subdim>
 class Face : public detail::FaceBase<dim, subdim> {
     static_assert(dim == 2 || dim > 4 ||
-        (dim == 3 && subdim == 1) ||
         (dim == 4 && subdim >= 2 && subdim <= 3),
         "The generic implementation of Face<dim, subdim> "
         "should not be used for those face class that are specialised "
