@@ -16,6 +16,9 @@ Version 7.1  [ TODO ]
         Class CallableArg<...>:
             - Now a public helper class in the main regina:: namespace.
             - Now behaves gracefully if the given index is out of range.
+        Class Edge<3>:
+            - Now specialised (instead of using the generic Face template).
+            - New routine linkingSurface().
         Class Example<4>:
             - New routine k3().
             - Reflected the result of cp2() so that it has intersection
@@ -52,6 +55,8 @@ Version 7.1  [ TODO ]
             - New routine intersectionForm().
             - New optimisations that reduce the need for 3-sphere/3-ball
               recognition when modifying a triangulation.
+        Class Vertex<3>:
+            - New routine linkingSurface().
         Routine for_constexpr():
             - New routine to support compile-time for loops.
     PYTHON:
